# configuro

./: Cargo.toml  LICENSE
.github/workflows/: ci.yml
src/: config_provider.rs  lib.rs  local_config.rs  profiles.rs  yaml.rs
tests/: integration_tests.rs
tests/config/: application-profile1.yml  application.yml
