[package]
name = "configuro"
version = "0.1.0"
authors = ["Adrian Kosiński <segodj112@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8"
yaml-rust ="0.4"
linked-hash-map = "0.5"
serde = { version = "1.0", features = ["derive"] }