[package]
name = "configuro"
version = "0.1.0"
authors = ["Adrian Kosiński <segodj112@gmail.com>"]
description = """
Configuration lib inspired by Spring Boot config
"""
edition = "2018"
keywords = ["configuro", "config", "configuration"]
repository = "https://github.com/adowsky/configuro"
license = "MIT"
categories = ["configuration"]


[dependencies]
serde_yaml = "0.8"
yaml-rust ="0.4"
linked-hash-map = "0.5"
serde = { version = "1.0", features = ["derive"] }